# goods

./: .gitignore  README.md  docker-compose.yml
goods/: Dockerfile  __init__.py  settings.py
goods/goods/: models.py  serializers.py  settings.py  urls.py  views.py
goods/goods/fixtures/: mydata.json
goods/goods/migrations/: 0001_initial.py  0002_auto_20200721_0945.py
notification-service/: Dockerfile  pyproject.toml
notification-service/migrations/: env.py
notification-service/migrations/versions/: 05827a483b0f_add_templates_tables.py
notification-service/src/notification_service/: asgi.py  listener.py  main.py
notification-service/src/notification_service/models/: templates.py
notification-service/src/notification_service/views/: templates.py
user_service/: Dockerfile  manage.py  requirements.txt
user_service/alembic/: env.py
user_service/alembic/versions/: 440ea1134d5_init_migration.py
user_service/config/: user_service.yaml
user_service/swagger/: create_user.yaml  get_all_users.yaml  get_user.yaml  login.yaml  logout.yaml  patch_user.yaml  refresh.yaml
user_service/user_service/: app.py  middlewares.py  models.py  routes.py  utils.py
user_service/user_service/services/: auth.py  serializers.py
user_service/user_service/views/: __init__.py  auth.py  user.py
