[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["gavrilova21 <gavrilova212121@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
rabbitmq = "^0.2.0"
importlib-metadata = "^1.7.0"
aiosmtplib = "^1.1.3"
aio-pika = "^6.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.poetry.plugins."notification_service.modules"]
"templates" = "notification_service.views.templates"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
